// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm with rememberMeLabel 1`] = `
<Component
  className=""
>
  <Component
    isError={false}
    isHidden={true}
  />
  <Component
    fieldId="pf-login-username-id"
    isRequired={true}
    isValid={true}
    label="Username"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-username-id"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="pf-login-username-id"
      onChange={[Function]}
      type="text"
      value=""
    />
  </Component>
  <Component
    fieldId="pf-login-password-id"
    isRequired={true}
    isValid={true}
    label="Password"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-password-id"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="pf-login-password-id"
      onChange={[Function]}
      type="password"
      value=""
    />
  </Component>
  <Component
    fieldId="pf-login-remember-me-id"
  >
    <Checkbox
      checked={false}
      className=""
      id="pf-login-remember-me-id"
      isChecked={false}
      isDisabled={false}
      isValid={true}
      label="remember me"
      onChange={[Function]}
    />
  </Component>
  <Component>
    <Component
      isBlock={true}
      isDisabled={false}
      onClick={[Function]}
      type="submit"
      variant="primary"
    >
      Log In
    </Component>
  </Component>
</Component>
`;

exports[`LoginForm with rememberMeLabel and rememberMeAriaLabel uses the rememberMeAriaLabel 1`] = `
<Component
  className=""
>
  <Component
    isError={false}
    isHidden={true}
  />
  <Component
    fieldId="pf-login-username-id"
    isRequired={true}
    isValid={true}
    label="Username"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-username-id"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="pf-login-username-id"
      onChange={[Function]}
      type="text"
      value=""
    />
  </Component>
  <Component
    fieldId="pf-login-password-id"
    isRequired={true}
    isValid={true}
    label="Password"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-password-id"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="pf-login-password-id"
      onChange={[Function]}
      type="password"
      value=""
    />
  </Component>
  <Component
    fieldId="pf-login-remember-me-id"
  >
    <Checkbox
      checked={false}
      className=""
      id="pf-login-remember-me-id"
      isChecked={false}
      isDisabled={false}
      isValid={true}
      label="remember me"
      onChange={[Function]}
    />
  </Component>
  <Component>
    <Component
      isBlock={true}
      isDisabled={false}
      onClick={[Function]}
      type="submit"
      variant="primary"
    >
      Log In
    </Component>
  </Component>
</Component>
`;

exports[`should render Login form 1`] = `
<Component
  className=""
>
  <Component
    isError={false}
    isHidden={true}
  />
  <Component
    fieldId="pf-login-username-id"
    isRequired={true}
    isValid={true}
    label="Username"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-username-id"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="pf-login-username-id"
      onChange={[Function]}
      type="text"
      value=""
    />
  </Component>
  <Component
    fieldId="pf-login-password-id"
    isRequired={true}
    isValid={true}
    label="Password"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-password-id"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="pf-login-password-id"
      onChange={[Function]}
      type="password"
      value=""
    />
  </Component>
  <Component>
    <Component
      isBlock={true}
      isDisabled={false}
      onClick={[Function]}
      type="submit"
      variant="primary"
    >
      Log In
    </Component>
  </Component>
</Component>
`;
